# a_pycon_story

./: .editorconfig  .env_template  .eslintignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Changelog.txt  Makefile  README FE.md  README.md  dev.sh  manage.py  pyproject.toml  setup.cfg  tasks.py
a_pycon_story/: __init__.py  asgi.py  base_settings.py  model_mixins.py  settings.py  settings_mixins.py  urls.py  wsgi.py
a_pycon_story/management/commands/: schedule_process.py  set_initial_site.py  setup_website.py  startapp_fh.py
docker/: Dockerfile  docker-compose.yaml  docker.code-workspace.tmpl  entrypoint_dev.sh  entrypoint_dev_qcluster.sh
docker/nginx/: default.conf  paths.conf
docker/nginx/templates/: default.conf.template
k8s/development/: 1_backend.yaml
k8s/integration/: 1_backend.yaml
k8s/production/: 1_backend.yaml
profiles/: __init__.py  apps.py  factories.py  models.py
profiles/migrations/: 0001_initial.py
pycon_service/: __init__.py  apps.py  clients.py  controllers.py  exceptions.py  factories.py  managers.py  mocked_clients.py  models.py  permissions.py  querysets.py  receivers.py  settings.py  utils.py
pycon_service/api/: serializers.py  urls.py  views.py
pycon_service/migrations/: 0001_initial.py
pycon_service/tests/: __init__.py  test_apis.py  test_clients.py  test_controllers.py  test_models.py  test_querysets.py  test_tdd.py
requirements/: common.in  dev.in  dev.txt  tests.in  tests.txt
templates/project/: base.html
uwsgiconf/: global.ini
