[coverage:run]
branch = True
omit =
    .tox/*
    .venv/*
    */asgi.py
    */migrations/*
    */tests/*
    */wsgi.py
    manage.py
    tasks.py
    dashboard.py
    */settings.py
    */management/commands/*
    */factories.py
    */customer_care/*
    */urls.py
    profiles/*
    */migration_utils.py
    */settings_mixins.py
    */model_mixins.py
    */context_processors.py
    */post_office_admin.py
    */model_admin_mixin.py
    */test_utils.py
    */docs_utils.py
    *admin.py
    */receivers.py
    */exceptions.py
source = .

[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    ./node_modules/*,
    */migrations/*,
    */south_migrations/*,
    */tests/*,
    ./src/*,
    project/settings/*,
ignore =
    E501,
    T499,
    W503,
    D104,
    D105,
    D101,
    D100,
    E203,
    E501,
    W503,
    F401,
    D103,
    F403,
    D102,
    B950,
    B008,
    D106,
    D401,
    D403,
    D400,
    D205,
    D200,
    D208,
    D210,
    T484,
    I005,
max-line-length = 120
mypy_config = setup.cfg
select = B,C,D,E,F,I,W,T4,B9

[metadata]
license-file = LICENSE.md

[testenv:coverage]
commands =
    coverage run --concurrency=multiprocessing {toxinidir}/manage.py test --noinput --parallel --reverse
    coverage combine
commands_pre =
    pip install \
        "black~=22.3.0" "isort~=5.7.0" "flake8~=3.8.0" "mypy~=0.931" tblib \
        types-requests types-freezegun types-python-dateutil types-pytz
    black --check .
    isort --check .
    flake8
    mypy .
deps = -r{toxinidir}/requirements/tests.txt
passenv =
    DATABASE_URL
setenv =
    DJANGO_CONFIGURATION=Testing
    DJANGO_SETTINGS_MODULE=a_pycon_story.settings

[testenv:report]
commands = coverage report --fail-under=93
deps = coverage~=5.3.0

[testenv:reporthtml]
commands = coverage html
deps = coverage~=5.3.0

[testenv:reportxml]
commands = coverage xml -o test-reports/coverage.xml
deps = coverage~=5.3.0

[tool:pytest]
DJANGO_CONFIGURATION=Testing
DJANGO_SETTINGS_MODULE=a_pycon_story.settings

[tox:tox]
envlist = coverage
skipsdist = True
